[package]
name = "account_id_test"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["psp22", "ownable", "reentrancy_guard"] }
bs58 = { version = "0.4.0", default-features = false }
# sp-core = { version = "20.0.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
# sp-runtime = { version = "19.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "bs58/std",
    "hex/std",
    # "sp-core/std",
    # "sp-runtime/std",
]
ink-as-dependency = []
